<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- MainActivity page -->
    <string name="MP_prompt">提示</string>
    <string name="MP_confirm">確定要退出嗎?</string>
    <string name="MP_OK">確定</string>
    <string name="MP_cancel">取消</string>
    
    <string name="app_name">Insight Hotel</string>
    <string name="action_settings">Settings</string>
    
       <!-- login popup window string -->
    <string name="ms_st">Membership_Number</string> 
    <string name="pw_st">Password</string>
    <string name="rn_st">Room Number</string>
    <string name="sign_in">Sign in</string>
    <string name="prompt1">Forget my Password/Membership Number</string>
    <string name="prompt2">Not yet a family member</string>
    <string name="prompt3">Join Now !</string>
    <string name="closepop">close</string>
    <integer-array name="wellcome_type">
        <item>0</item>
        <item>0</item>
        <item>0</item>
        <item>0</item>
        <item>0</item>
        <item>0</item>
        <item>0</item>
    </integer-array>
    <string-array name="welcome_array">
        <item>BOOK A ROOM</item>
        <item>HOTEL TOUR</item>
        <item>MY ROOM</item>
        <item>MY BOOKING</item>
        <item>CONCIERGE</item>
        <item>MESSAGE</item>
        <item>LIVE CHAT</item>
    </string-array>
    
    <!-- my room page string -->
    <string name="myroom">MY ROOM</string>
    <string name="myroom_des">Please insert your room number &amp; membership password to unlock the door</string>
    <string name="myroom_num">ROOM NUMBER</string>
    <string name="myroom_mspw">MEMBERSHIP PASSWORD</string>
    <string name="btn_ok">OK</string>
    <string name="btn_lock">LOCK</string>
    <string name="btn_open">OPEN</string>
    <string name="link_help">Help Me</string>
    <string name="link_unlock">&gt;&gt;&gt; side to unlock</string>
    
    <!-- register1 page string -->
    <string name="reg_title">Title</string>

    
    <!-- register2 page string -->
    <string name="reg_message0">Congratulation</string>
    <string name="Confirm">Confirm</string>
    <string name="reg_message1">You are now an official family member of Home Hotel!</string>
    <string name="reg_message2">Membership Number</string>
    <string name="reg_hint1">Please enter a password</string>
    <string name="reg_hint2">Please confirm your new password</string>
    <string name="unlock">開鎖成功</string>
    
    
</resources>
