<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/myroom"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:text="@string/myroom_des"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText2"
        android:layout_below="@+id/textView2"
        android:text="@string/myroom_num"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText2"
        android:layout_below="@+id/editText1"
        android:text="@string/myroom_mspw"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignRight="@+id/textView4"
        android:layout_below="@+id/textView3"
        android:ems="10"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView4"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView4"
        android:layout_toRightOf="@+id/editText2"
        android:gravity="center_horizontal"
        android:text="@string/btn_ok"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText2"
        android:layout_centerHorizontal="true"
        android:autoLink="none"
        android:text="@string/link_help"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tv_lock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_open"
        android:layout_alignRight="@+id/tv_open"
        android:layout_below="@+id/textView5"
        android:layout_marginTop="20dp"
        android:background="#6666ff"
        android:gravity="center_horizontal"
        android:text="@string/btn_lock"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/tv_open"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_lock"
        android:layout_centerHorizontal="true"
        android:background="#ffffff"
        android:gravity="center_horizontal"
        android:text="@string/btn_open"
        android:textSize="36sp" />
    
     <com.example.insightdemo.VerticalSeekBar

        android:id="@+id/verticalSeekbar"
        android:max="100"
        android:layout_width="60sp" 
        android:thumb="@drawable/seekbar_thumb"
        android:layout_height="100sp"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/tv_lock"
        android:layout_below="@+id/textView5"
        android:layout_marginTop="20dp"
        android:progress="100" />

</RelativeLayout>
